--- a/final_project.qmd
+++ b/final_project.qmd
@@ -1,6 +1,29 @@
 ---
-title: "final_project"
-format: pdf
+title: "Final Project"
+subtitle: "Stat 184"
+author: "Shania, Sree, and Lauren"
+date: "May 7, 2025"
+date-modified: now
+format:
+  pdf:
+    toc: false
+    code-fold: true
+    code-link: true
+    number-sections: true
+    number-depth: 5
+    fig-align: center
+    cap-location: top
+    geometry: 
+      - top = 1in
+      - left = 1in
+      - right = 1in
+      - bottom = 1in
+    colorlinks: true
+execute: 
+  echo: false
+  output: true
+  warning: false
+code-appendix: true
 ---
 ```{r}
 # Import all necessary libraries for the entire qmd file 
@@ -12,16 +35,22 @@ library(ggplot2)
 library(janitor)
 ```
 
+## World Happiness Index Data Wrangling and EDA
 ```{r}
+## World Happiness Index Data Wrangling and EDA
+
+
 # Goal: Tidy the world happiness data so each year is integrated into one
 # data set. The resulting case is the happiness score for a country in a
 # specific year. Then complete EDA analysis by creating summary tables of
 # each feature and grouped by region. 
 
-# Need: all of the separate world happiness data csv (2015, 2016, 2017, 2018, # and 2019)
+# Need: all of the separate world happiness data csv (2015, 2016, 2017, 2018,
+# and 2019)
 
 # Plan
-# 1a. Read in all of the individual data sets (2015, 2016, 2017, 2018, and 2019) from our github repository
+# 1a. Read in all of the individual data sets (2015, 2016, 2017, 2018, and
+# 2019) from our github repository
 # 2a. Tidy 2015 data
 # 2b. Remove standard error column as only appear in 2015 data and no other
 # analogs in the other data sets
@@ -112,8 +141,9 @@ data_2019 <- read.csv("https://raw.githubusercontent.com/Stat184-Spring2025/Sec1
 # analogs in the other data sets
 # 2c. Add in year column so when merge all data sets together, know this data
 # came from 2015
-data_2015 <- data_2015 |> select(!c(
-  "Standard.Error")
+data_2015 <- data_2015 |>
+  select(!c(
+    "Standard.Error")
   ) |> mutate(
     Year = 2015
   )
@@ -126,7 +156,8 @@ data_2015 <- data_2015 |> select(!c(
 # other analogs in the other data sets
 # 3c. Add in year column so when merge all data sets together, know this data
 # came from 2016
-data_2016 <- data_2016 |> select(!c(
+data_2016 <- data_2016 |>
+  select(!c(
     "Lower.Confidence.Interval",
     "Upper.Confidence.Interval"
     )
@@ -142,7 +173,8 @@ data_2016 <- data_2016 |> select(!c(
 # in the other data sets
 # 4c. Add in year column so when merge all data sets together, know this data
 # came from 2017
-data_2017 <- data_2017 |> select(!c(
+data_2017 <- data_2017 |>
+  select(!c(
     "Whisker.high",
     "Whisker.low",
     )
@@ -227,7 +259,8 @@ total_data_merge <- total_data |> left_join(
   )
 
 total_data_merge$Region = total_data_merge$Region.x
-total_data_merge$Region[!is.na(total_data_merge$Region.y)] = total_data_merge$Region.y[!is.na(total_data_merge$Region.y)]
+total_data_merge$Region[!is.na(total_data_merge$Region.y)] =
+  total_data_merge$Region.y[!is.na(total_data_merge$Region.y)]
 
 total_data_merge <- total_data_merge |> left_join(
     x = total_data_merge,
@@ -236,7 +269,8 @@ total_data_merge <- total_data_merge |> left_join(
   )
 
 total_data_merge$Region = total_data_merge$Region.x
-total_data_merge$Region[!is.na(total_data_merge$Region.y)] = total_data_merge$Region.y[!is.na(total_data_merge$Region.y)]
+total_data_merge$Region[!is.na(total_data_merge$Region.y)] =
+  total_data_merge$Region.y[!is.na(total_data_merge$Region.y)]
 total_data$Region <- total_data_merge$Region
 
 ```
@@ -289,6 +323,11 @@ total_data_summary <- total_data |>
 ```
 
 ```{r}
+#| label: tbl-summaryvariablesworldhappiness
+#| tbl-cap: "Summary Statistics for each variable in the World Happiness Index Data"
+#| tbl-pos: H
+#| lst-label: lst-table1
+#| lst-cap: "Code Chunk for Making World Happiness Summary Stats Enlisted"
 # 11a. Create a summary table with a caption and kable styling.
 total_data_summary |>
   kable(
@@ -300,6 +339,7 @@ total_data_summary |>
     font_size = 8
   )
 ```
+In @tbl-summaryvariablesworldhappiness
 
 ```{r}
 # 12a. Create a summary table grouped by region for each feature in the data
@@ -341,6 +381,11 @@ total_data_summary_region <- total_data |>
 ```
 
 ```{r}
+#| label: tbl-regionsummaryworldhappiness
+#| tbl-cap: "Summary Statistics for each variable, grouped based on Region, from the world happiness index data set"
+#| tbl-pos: H
+#| lst-label: lst-table1
+#| lst-cap: "Code Chunk for Making Summary Table Based on Region Enlisted"
 # 13a. Create a summary table with a caption and kable styling.
 total_data_summary_region |>
   kable(
@@ -351,17 +396,24 @@ total_data_summary_region |>
     bootstrap_options = c("striped", "condensed"),
     font_size = 5
   )
+
+
 ```
+In @tbl-regionsummaryworldhappiness
 
-
+## World Bank Data Wrangling and EDA
 ```{r}
+## World Bank Data Wrangling and EDA
+
+
 # Goal: Tidy the world bank data so only the years and countries included in
 # the world happiness index remain. Also, subset the variables to only
 # include country, year, and our selected features (access to electricity,
 # individuals using the internet, and birth rate). The resulting case is the
 # information for a country in a specific year. Then complete EDA analysis by
-# creating summary tables of each feature and a scatter plot of happiness
-# score v percentage of individuals using the internet.
+# creating summary tables of each feature and scatter plots of happiness
+# score v percentage of individuals using the internet, birth rate, and
+# access to electricity.
 
 # Need: the data from the world bank data set
 
@@ -394,10 +446,18 @@ total_data_summary_region |>
 # as one of the columns to join the table on
 # 5c. Use a left join on the world happiness index data and the world bank
 # data, using the columns country and year. Remove rows where there is no
-# data for individuals using internet, as what we are making a graph of.
+# data for individuals using internet, birth rate, and access to electricity
 # 6a. Create a scatter plot of percentage of individuals using the internet
 # versus the country's happiness score.
 # 6b. Set the x and y axis, the geometry of each mark, point, create labels,
+# and add black and white theme
+# 7a. Create a scatter plot of the birth rate versus the country's happiness
+# score.
+# 7b. Set the x and y axis, the geometry of each mark, point, create labels,
+# and add black and white theme
+# 8a. Create a scatter plot of access to electricity versus the country's
+# happiness score.
+# 8b. Set the x and y axis, the geometry of each mark, point, create labels,
 # and add black and white theme
 
 # 1a. Read in the world bank data set from our github repository
@@ -476,6 +536,11 @@ world_bank_summary <- world_bank_tidy |>
 ```
 
 ```{r}
+#| label: tbl-summaryworldbank
+#| tbl-cap: "Summary Statistics of each feature from the World Bank data set"
+#| tbl-pos: H
+#| lst-label: lst-table1
+#| lst-cap: "Code Chunk for Making World Bank Summary Table"
 # 4a. Create a summary table with a caption and kable styling.
 world_bank_summary |>
   kable(
@@ -487,13 +552,15 @@ world_bank_summary |>
     font_size = 8
   )
 ```
+In @tbl-summaryworldbank
+
 ```{r}
 # 5a. Merge world happiness index data and world bank data
 # 5b. Ensure year column in world bank data is treated as numeric, as using
 # as one of the columns to join the table on
 # 5c. Use a left join on the world happiness index data and the world bank
 # data, using the columns country and year. Remove rows where there is no
-# data for individuals using internet, as what we are making a graph of.
+# data for individuals using internet, birth rate, and access to electricity 
 world_bank_tidy <- world_bank_tidy |>
   mutate(
     Year = as.numeric(Year)
@@ -504,11 +571,17 @@ merged_data <- total_data |>
     x = total_data,
     y = world_bank_tidy,
     by = join_by(Country == country, Year == Year)
-  ) |> drop_na(individuals.using.internet)
+  ) |> drop_na(c(individuals.using.internet, birth.rate, access.to.electricity))
 
 ```
 
 ```{r}
+#| label: fig-internetplot
+#| fig-cap: "Happiness Score versus Percentage of Individuals Using the Internet"
+#| fig-pos: H
+#| fig-height: 5
+#| fig-alt: "Scatterplot of happiness score v internet"
+#| lst-cap: "Code Chunk for Making Happiness Score v Internet Figure"
 # 6a. Create a scatter plot of percentage of individuals using the internet
 # versus the country's happiness score.
 # 6b. Set the x and y axis, the geometry of each mark, point, create labels,
@@ -526,8 +599,66 @@ ggplot(
 ) + theme_bw()
 
 ```
+In @fig-internetplot
 
 ```{r}
+#| label: fig-birthrateplot
+#| fig-cap: "Happiness Score versus Birth Rate"
+#| fig-pos: H
+#| fig-height: 5
+#| fig-alt: "Scatterplot of happiness score v birth rate"
+#| lst-cap: "Code Chunk for Making Happiness Score v birth rate Figure"
+# 7a. Create a scatter plot of the birth rate versus the country's happiness
+# score.
+# 7b. Set the x and y axis, the geometry of each mark, point, create labels,
+# and add black and white theme
+ggplot(
+  data = merged_data,
+  mapping = aes(
+    x = birth.rate,
+    y = Happiness.Score
+  )
+) + geom_point() + labs(
+  x = "Birth Rate",
+  y = "Happiness Score",
+  title = "Happiness Score v Birth Rate"
+) + theme_bw()
+
+```
+In @fig-birthrateplot
+
+```{r}
+#| label: fig-electricityplot
+#| fig-cap: "Happiness Score versus Access to Electricity"
+#| fig-pos: H
+#| fig-height: 5
+#| fig-alt: "Scatterplot of happiness score v electricity"
+#| lst-cap: "Code Chunk for Making Happiness Score v eletricity Figure"
+# 8a. Create a scatter plot of access to electricity versus the country's
+# happiness score.
+# 8b. Set the x and y axis, the geometry of each mark, point, create labels,
+# and add black and white theme
+ggplot(
+  data = merged_data,
+  mapping = aes(
+    x = access.to.electricity,
+    y = Happiness.Score
+  )
+) + geom_point() + labs(
+  x = "Access to Electricity",
+  y = "Happiness Score",
+  title = "Happiness Score v Access to Electricity"
+) + theme_bw()
+
+
+```
+In @fig-electricityplot
+
+## Visualization 1 - Frequency Table of Happiness Scores and Region
+```{r}
+## Visualization 1 - Frequency Table of Happiness Scores and Region
+
+
 # Goal: Create a frequency table of the binned happiness scores against each
 # region. The scores should be binned, as they are currently in decimal form,
 # therefore generalizing them will allow for greater comparison power.
@@ -613,6 +744,11 @@ world_happy_freq <- total_data_summary_region |>
 ```
 
 ```{r}
+#| label: tbl-regionvhappinessscore
+#| tbl-cap: "Region and Happiness Score Frequency Table"
+#| tbl-pos: H
+#| lst-label: lst-table1
+#| lst-cap: "Code Chunk for Making Region/Happiness Freq Table"
 # 3a. Polish region and happiness score relative frequency table
 # 3b. Put percentages for each cell in parentheses
 # 3c. Add commas to numbers over nine hundred and ninety nine
@@ -642,17 +778,23 @@ world_happy_freq |>
     font_size = 3
   )
 
+
+
 ```
+In @tbl-regionvhappinessscore
 
-
+## Visualization 2 - Scatter plot of Happiness Score v Birth Rate
 ```{r}
-# Goal: Create a scatter plot of the percentage of individuals using the internet versus the country's happiness score. 
+## Visualization 2 - Scatter plot of Happiness Score v Birth Rate
+
+
+# Goal: Create a scatter plot of the birth rate versus the country's happiness score. 
 
 # Need: merged data set of world happiness index data and world bank data
 
 # Plan
-# 1a. Create a scatter plot of percentage of individuals using the internet
-# versus the country's happiness score.
+# 1a. Create a scatter plot of birth rate versus the country's happiness
+# score.
 # 1b. Specify the wrangled data to be used, the x axis, the y
 # axis, and what the color of each point is based on, the happiness score
 # 1c. Specify aesthetic geometry, point
@@ -661,8 +803,17 @@ world_happy_freq |>
 # 1e. Add labels to the x axis, y axis, color, and the title, add black and
 # white theme
 
-# 1a. Create a scatter plot of percentage of individuals using the internet
-# versus the country's happiness score.
+```
+
+```{r}
+#| label: fig-finalbirthrateplot
+#| fig-cap: "Happiness Score versus Birth Rate"
+#| fig-alt: "Final Scatterplot of happiness score v birth rate"
+#| lst-cap: "Code Chunk for Making Final Happiness Score v Birth Rate Figure"
+#| fig-pos: H
+#| fig-height: 5
+# 1a. Create a scatter plot of birth rate versus the country's happiness
+# score.
 # 1b. Specify the wrangled data to be used, the x axis, the y
 # axis, and what the color of each point is based on, the happiness score
 # 1c. Specify aesthetic geometry, point
@@ -673,7 +824,7 @@ world_happy_freq |>
 ggplot(
   data = merged_data,
   mapping = aes(
-    x = individuals.using.internet,
+    x = birth.rate,
     y = Happiness.Score,
     color = Happiness.Score
   )
@@ -681,14 +832,38 @@ ggplot(
   size = 2
 ) + geom_smooth(
   method = lm,
+  formula = y ~ x,
   se = FALSE,
   col = '#000000',
   linewidth = 2
 ) + labs(
-  x = "Percentage of Individuals Using the Internet",
+  x = "Birth Rate",
   y = "Happiness Score",
   color = "Happiness Score",
-  title = "Happiness Score v Percentage of Individuals Using the Internet"
+  title = "Happiness Score v Birth Rate"
 ) + theme_bw()
 
+
+
+```
+In @fig-finalbirthrateplot
+
+## References
+
+“World Happiness Report.” www.kaggle.com,
+
+      www.kaggle.com/datasets/unsdsn/world-happiness.
+
+
+González, Ariel. “World Bank World Development Indicators.”
+
+      Kaggle.com, 2022,
+      
+      www.kaggle.com/datasets/nicolasgonzalezmunoz/world-bank-
+      
+      world-development-indicators?resource=download.
+
+## Code Appendix
+
+```{r codeAppend, ref.label=knitr::all_labels(), echo=TRUE, eval=FALSE}
 ```
